[package]
name = "day4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polling = "2"
socket2 = "0.4"
libc = "0.2"
nix = "0.23"
scoped-tls = "1"
futures = "0.3"
waker-fn = "1"
pin-utils = "0.1"
rustc-hash = "1"
async-channel = "1.9.0"

tokio = {version = "1", features = ["io-util"]}